<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@color/white"
    >
	<RelativeLayout
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar"
        android:background="@drawable/top_bg"
        android:orientation="horizontal"
        >
        <FrameLayout 
            android:id="@+id/back_cover"
            android:layout_width="wrap_content"
        	android:layout_height="match_parent"
		    android:layout_gravity="left"
        	android:paddingLeft="@dimen/padding_20"
        	android:paddingRight="@dimen/padding_20"
        	android:foreground="@drawable/framelayout_selector"
            >
			<ImageView 
			    android:layout_width="12dp"
	        	android:layout_height="21dp"
			    android:layout_gravity="center"
			    android:src="@drawable/icon_back"
			    />
        </FrameLayout>
		<TextView 
		    android:id="@+id/title"
		    android:layout_width="match_parent"
        	android:layout_height="match_parent"
		    android:gravity="center"
		    android:text="关于我们"
		    android:textColor="@color/white"
		    android:textSize="@dimen/bigger"
		    />
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:padding="@dimen/padding_10"
    	android:orientation="vertical"
        >
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/big"
            android:text="@string/about_us_text"
            />
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:gravity="center"
            android:textSize="@dimen/middle"
            android:text="@string/about_us_copyright"
            />
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:gravity="center"
            android:textSize="@dimen/middle"
            android:text="@string/about_us_company"
            />
    </LinearLayout>
    
</LinearLayout>