<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@color/white"
    >
	<LinearLayout
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar"
        android:background="@drawable/top_bg"
        android:orientation="horizontal"
        >
        <FrameLayout 
            android:id="@+id/back_cover"
            android:layout_width="wrap_content"
        	android:layout_height="match_parent"
		    android:layout_gravity="left"
        	android:paddingLeft="@dimen/padding_15"
        	android:paddingRight="@dimen/padding_15"
        	android:foreground="@drawable/framelayout_selector"
            >
			<ImageView 
			    android:layout_width="12dp"
	        	android:layout_height="21dp"
			    android:layout_gravity="center"
			    android:src="@drawable/icon_back"
			    />
        </FrameLayout>
		<EditText
            android:id="@+id/search_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/search_home"
            android:imeOptions="actionSearch"
            android:gravity="center_vertical|left"
            android:textCursorDrawable="@null"
            android:hint="@string/search_hinttext"
            android:textColorHint="@color/text_grey"
            android:textColor="@color/text_dark"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="@dimen/big" >
			<requestFocus />
		    </EditText>
        <FrameLayout
            android:id="@+id/search_cover"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:foreground="@drawable/framelayout_selector"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >
            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/bigger" />
        </FrameLayout>
    </LinearLayout>
    
	<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

	    <LinearLayout 
	        android:id="@+id/list_layout"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:visibility="gone"
	        >
	         <TextView
                    android:id="@+id/result_number_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
	                android:background="@color/app_color"
	                android:gravity="left|center_vertical"
	                android:padding="@dimen/padding_7"
                    android:text="共  条结果"
                    android:textColor="@color/white"
                    android:textSize="@dimen/middle" />
	        <android.support.v4.widget.SwipeRefreshLayout
	            android:id="@+id/mswiperefreshlayout"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent" >
	        <ListView
	            android:id="@+id/content_lv"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:background="@color/none"
	            android:cacheColorHint="@color/none"
	            android:divider="@color/text_tint2"
	            android:dividerHeight="1px"
	            android:fadingEdge="none"
	            android:scrollbars="none" />
			</android.support.v4.widget.SwipeRefreshLayout>
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/message_layout"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:background="@color/white"
	        android:orientation="vertical"
	        android:visibility="gone"
	        >
	        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/sorry_nothing_found"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/bigger" />
	        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/change_search_content"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/bigger" />
	    </LinearLayout>
	    
        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
            android:id="@+id/progressBarCircularIndetermininate"
            android:layout_width="@dimen/progressbar_width"
            android:layout_height="@dimen/progressbar_heigh"
            android:layout_gravity="center"
            android:background="@color/app_color"
            android:visibility="gone" />
    </FrameLayout>
    
</LinearLayout>