<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar"
        android:background="@drawable/top_bg"
        android:paddingLeft="0dp" >

        <FrameLayout
            android:id="@+id/back_cover"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:foreground="@drawable/framelayout_selector"
            android:paddingLeft="@dimen/padding_20"
            android:paddingRight="@dimen/padding_20" >

            <ImageView
                android:layout_width="12dp"
                android:layout_height="21dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_back" />
        </FrameLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/confirm_order"
            android:textColor="@color/white"
            android:textSize="@dimen/bigger" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_color"
            android:padding="@dimen/padding_7" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/confirm_order_list"
                android:textColor="@color/white"
                android:textSize="@dimen/middle" />
        </RelativeLayout>

        <ListView
            android:id="@+id/content_lv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/none"
            android:cacheColorHint="@color/none"
            android:divider="@color/text_tint2"
            android:dividerHeight="1px"
            android:fadingEdge="none"
            android:scrollbars="none" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_color"
                android:padding="@dimen/padding_7" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/pay_list"
                    android:textColor="@color/white"
                    android:textSize="@dimen/middle" />
            </RelativeLayout>
            
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_7"
                >
                <RadioGroup 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
			            android:id="@+id/rb_weixin"
			            android:layout_width="147dp"
			            android:layout_height="35dp"
			            android:layout_gravity="left"
			            android:layout_marginRight="10dp"
			            android:button="@null"
			            android:background="@drawable/cb_weixin_selector"
			            android:textSize="@dimen/middle" />
                    <RadioButton
			            android:id="@+id/rb_zhifubao"
			            android:layout_width="147dp"
			            android:layout_height="35dp"
			            android:layout_gravity="right"
			            android:layout_marginLeft="@dimen/padding_margin"
			            android:button="@null"
			            android:background="@drawable/cb_zhifubao_selector"
			            android:textSize="@dimen/middle" />
                </RadioGroup>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/app_color"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/total_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_10"
                    android:gravity="left|center_vertical"
                    android:text="合计：￥0.00"
                    android:textColor="@color/white"
                    android:textSize="@dimen/bigger" />

                <Button
                    android:id="@+id/confirm_to_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/btn_balance_selector"
                    android:paddingLeft="@dimen/padding_15"
                    android:paddingRight="@dimen/padding_15"
                    android:text="@string/confirm_to_pay"
                    android:textSize="@dimen/big" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>